# orient-stl

./: .gitignore  CLAUDE.md  Makefile  README.md  index.html  orient-spec.md  test-tetrahedron.stl
.planning/: .continue-here.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
assets/: index-0evSmbgr.css  index-8NAOWP7c.js  index-B-xrSYkH.css  index-BOTb0jxa.js  index-BXUCmB6w.js  index-BbqyeLv-.js  index-C-4G5mMg.js  index-C9p5m1zz.js  index-C9vqM7kR.js  index-CBeN3bQG.js  index-CHXQkZwK.css  index-CkJzybRd.js  index-DKZ7jcPo.js  index-DOMxdiwg.js  index-DT04g98k.js  index-DeuU-bzk.js  index-HO70fvzN.css  index-uSKOYLvr.js  orient.worker-BevEtBRf.js  orient.worker-Btxmy9tq.js  orient.worker-CT1eq91f.js  orient.worker-CkjL2zAu.js  orient.worker-CnLQtsAG.js  orient.worker-Dj9J32xn.js  orient.worker-Q6vYi8zu.js  orient_core-BzZRcgQx.js  orient_core-CIPlvJE1.js  orient_core-CJaZOlHP.js  orient_core-DN8gW105.js  orient_core-DVJn0FZc.js  orient_core-N_T8tjz1.js  orient_core-cT1fqsPb.js  orient_core_bg-Bak9DCPE.wasm  orient_core_bg-C-Stpz3o.wasm  orient_core_bg-DGhiYq-z.wasm  orient_core_bg-DbdS25FI.wasm  orient_core_bg-Dgl_xWHG.wasm  orient_core_bg-G3-S_d1m.wasm  orient_core_bg-csyy4phx.wasm
core/: Cargo.toml
core/src/: candidates.rs  decimate.rs  harness.rs  hull.rs  lib.rs  main.rs  mesh.rs  ranking.rs  repair.rs  rng.rs  scoring.rs  selection.rs  stability.rs  stl.rs  yaw.rs
core/tests/: benchmark.rs  pipeline_test.rs
scripts/: batch-analyze.sh  ingest-candidate.jq
tools/: gen-test-stl.mjs  test-wasm.mjs
web/: index.html  (+5 more)
(+124 files in other folders)
